@@ -40,9 +40,6 @@
 #define INDENT_FACTOR 4
 
 typedef struct {
-	GList  *first_task;
-	GList  *last_task;
-
 	mrptime  first_time;
 	mrptime  last_time;
 
@@ -129,7 +126,6 @@ typedef struct {
 	gdouble x, y;
 } TaskCoord;
 
-
 typedef struct {
 	MrpTask *task;
 	gint     depth;
@@ -187,18 +183,18 @@ print_table_header (PlannerGanttPrintData *data)
 	y = data->row_height;
 
 	planner_print_job_show_clipped (data->job,
-				   x, y,
-				   _("Name"),
-				   data->name_x1, 0, 
-				   data->name_x2 - data->job->x_pad / 2, y + data->row_height);
+					x, y,
+					_("Name"),
+					data->name_x1, 0, 
+					data->name_x2 - data->job->x_pad / 2, y + data->row_height);
 
 	x = data->work_x1 + data->job->x_pad;
 
 	planner_print_job_show_clipped (data->job,
-				   x, y,
-				   _("Work"),
-				   data->work_x1, 0, 
-				   data->work_x2 - data->job->x_pad / 2, y + data->row_height);
+					x, y,
+					_("Work"),
+					data->work_x1, 0, 
+					data->work_x2 - data->job->x_pad / 2, y + data->row_height);
 
 	planner_print_job_set_font_regular (data->job);
 }
@@ -250,10 +246,10 @@ print_table_tasks (PlannerGanttPrintData *data,
 		}
 
 		planner_print_job_show_clipped (data->job,
-					   x, y,
-					   str,
-					   data->name_x1, 0, 
-					   data->name_x2 - data->job->x_pad / 2, y + data->row_height);
+						x, y,
+						str,
+						data->name_x1, 0, 
+						data->name_x2 - data->job->x_pad / 2, y + data->row_height);
 
 		g_free (str);
 		
@@ -261,10 +257,10 @@ print_table_tasks (PlannerGanttPrintData *data,
 		
 		str = planner_format_duration (work, 8);
 		planner_print_job_show_clipped (data->job,
-					   x, y,
-					   str,
-					   data->work_x1, 0, 
-					   data->work_x2 - data->job->x_pad / 2, y + data->row_height);
+						x, y,
+						str,
+						data->work_x1, 0, 
+						data->work_x2 - data->job->x_pad / 2, y + data->row_height);
 		g_free (str);
 
 		y += data->row_height / 4;
@@ -327,10 +323,10 @@ print_time_header (PlannerGanttPrintData *data,
 			str = planner_scale_format_time (t, data->major_unit, data->major_format);
 			
 			planner_print_job_show_clipped (data->job,
-						   x + data->job->x_pad, y,
-						   str,
-						   MAX (x, x1), y1, 
-						   x + width, y2);
+							x + data->job->x_pad, y,
+							str,
+							MAX (x, x1), y1, 
+							x + width, y2);
 			
 			g_free (str);
 		}
@@ -358,10 +354,10 @@ print_time_header (PlannerGanttPrintData *data,
 			str = planner_scale_format_time (t, data->minor_unit, data->minor_format);
 			
 			planner_print_job_show_clipped (data->job,
-						   x + data->job->x_pad, y,
-						   str,
-						   MAX (x, x1), y2, 
-						   x + width, y3);
+							x + data->job->x_pad, y,
+							str,
+							MAX (x, x1), y2, 
+							x + width, y3);
 			
 			g_free (str);
 		}
@@ -966,10 +962,12 @@ planner_gantt_print_do (PlannerGanttPrintData *data)
 
 						boundary_overlap = FALSE;
 
-						/* Check for corner case of non-working interval overlapping page boundary */
+						/* Check for corner case of
+						 * non-working interval
+						 * overlapping page boundary.
+						 */
 
 						if (ival_start > t2) {
-
 							boundary_overlap = TRUE;
 						}
 
@@ -997,10 +995,12 @@ planner_gantt_print_do (PlannerGanttPrintData *data)
 
 					boundary_overlap = FALSE;
 
-					/* Check for corner case of non-working interval overlapping page boundary */
+					/* Check for corner case of non-working
+					 * interval overlapping page
+					 * boundary.
+					 */
 
 					if (t1 > t2) {
-
 						boundary_overlap = TRUE;
 					}
 
@@ -1035,19 +1035,19 @@ planner_gantt_print_do (PlannerGanttPrintData *data)
 				t2 = t1 + (data->job->width - (data->tree_x2 - data->tree_x1)) * data->f;
 
 				planner_print_job_moveto (data->job,
-						     data->tree_x2,
-						     0);
+							  data->tree_x2,
+							  0);
 				planner_print_job_lineto (data->job,
-						     data->tree_x2,
-						     data->job->height);
+							  data->tree_x2,
+							  data->job->height);
 				gnome_print_stroke (data->job->pc);
 				
 				planner_print_job_moveto (data->job,
-						     data->name_x2,
-						     0);
+							  data->name_x2,
+							  0);
 				planner_print_job_lineto (data->job,
-						     data->name_x2,
-						     data->job->height);
+							  data->name_x2,
+							  data->job->height);
 				gnome_print_stroke (data->job->pc);
 
 				print_table_tasks (data,
@@ -1109,139 +1109,139 @@ planner_gantt_print_do (PlannerGanttPrintData *data)
 					break;
 				case SUMMARY_LEFT:
 					planner_print_job_moveto (data->job,
-							     element->x1,
-							     element->y1 + data->summary_thick);
+								  element->x1,
+								  element->y1 + data->summary_thick);
 					planner_print_job_lineto (data->job,
-							     element->x1,
-							     element->y1 + data->summary_thick + data->summary_height);
+								  element->x1,
+								  element->y1 + data->summary_thick + data->summary_height);
 					planner_print_job_lineto (data->job,
-							     element->x1 + data->summary_slope,
-							     element->y1 + data->summary_thick);
+								  element->x1 + data->summary_slope,
+								  element->y1 + data->summary_thick);
 					gnome_print_closepath (data->job->pc);
 					gnome_print_fill (data->job->pc);
 
 					planner_print_job_moveto (data->job,
-							     element->x2,
-							     element->y1 + 2 * data->summary_thick);
+								  element->x2,
+								  element->y1 + 2 * data->summary_thick);
 					planner_print_job_lineto (data->job,
-							     element->x1,
-							     element->y1 + 2 * data->summary_thick);
+								  element->x1,
+								  element->y1 + 2 * data->summary_thick);
 					planner_print_job_lineto (data->job,
-							     element->x1,
-							     element->y1 + data->summary_thick);
+								  element->x1,
+								  element->y1 + data->summary_thick);
 					planner_print_job_lineto (data->job,
-							     element->x2,
-							     element->y1 + data->summary_thick);
+								  element->x2,
+								  element->y1 + data->summary_thick);
 					gnome_print_closepath (data->job->pc);
 					gnome_print_fill (data->job->pc);
 					break;
 				case SUMMARY_RIGHT:
 					planner_print_job_moveto (data->job,
-							     element->x2,
-							     element->y1 + data->summary_thick);
+								  element->x2,
+								  element->y1 + data->summary_thick);
 					planner_print_job_lineto (data->job,
-							     element->x2,
-							     element->y1 + data->summary_thick + data->summary_height);
+								  element->x2,
+								  element->y1 + data->summary_thick + data->summary_height);
 					planner_print_job_lineto (data->job,
-							     element->x2 - data->summary_slope,
-							     element->y1 + data->summary_thick);
+								  element->x2 - data->summary_slope,
+								  element->y1 + data->summary_thick);
 					gnome_print_closepath (data->job->pc);
 					gnome_print_fill (data->job->pc);
 
 					planner_print_job_moveto (data->job,
-							     element->x2,
-							     element->y1 + 2 * data->summary_thick);
+								  element->x2,
+								  element->y1 + 2 * data->summary_thick);
 					planner_print_job_lineto (data->job,
-							     element->x1,
-							     element->y1 + 2 * data->summary_thick);
+								  element->x1,
+								  element->y1 + 2 * data->summary_thick);
 					planner_print_job_lineto (data->job,
-							     element->x1,
-							     element->y1 + data->summary_thick);
+								  element->x1,
+								  element->y1 + data->summary_thick);
 					planner_print_job_lineto (data->job,
-							     element->x2,
-							     element->y1 + data->summary_thick);
+								  element->x2,
+								  element->y1 + data->summary_thick);
 					gnome_print_closepath (data->job->pc);
 					gnome_print_fill (data->job->pc);
 					break;
 				case SUMMARY_WHOLE:
 					planner_print_job_moveto (data->job,
-							     element->x1,
-							     element->y1 + data->summary_thick);
+								  element->x1,
+								  element->y1 + data->summary_thick);
 					planner_print_job_lineto (data->job,
-							     element->x1,
-							     element->y1 + data->summary_thick + data->summary_height);
+								  element->x1,
+								  element->y1 + data->summary_thick + data->summary_height);
 					planner_print_job_lineto (data->job,
-							     element->x1 + data->summary_slope,
-							     element->y1 + data->summary_thick);
+								  element->x1 + data->summary_slope,
+								  element->y1 + data->summary_thick);
 					gnome_print_closepath (data->job->pc);
 					gnome_print_fill (data->job->pc);
 					
 					planner_print_job_moveto (data->job,
-							     element->x2,
-							     element->y1 + data->summary_thick);
+								  element->x2,
+								  element->y1 + data->summary_thick);
 					planner_print_job_lineto (data->job,
-							     element->x2,
-							     element->y1 + data->summary_thick + data->summary_height);
+								  element->x2,
+								  element->y1 + data->summary_thick + data->summary_height);
 					planner_print_job_lineto (data->job,
-							     element->x2 - data->summary_slope,
-							     element->y1 + data->summary_thick);
+								  element->x2 - data->summary_slope,
+								  element->y1 + data->summary_thick);
 					gnome_print_closepath (data->job->pc);
 					gnome_print_fill (data->job->pc);
 					
 					planner_print_job_moveto (data->job,
-							     element->x2,
-							     element->y1 + 2 * data->summary_thick);
+								  element->x2,
+								  element->y1 + 2 * data->summary_thick);
 					planner_print_job_lineto (data->job,
-							     element->x1,
-							     element->y1 + 2 * data->summary_thick);
+								  element->x1,
+								  element->y1 + 2 * data->summary_thick);
 					planner_print_job_lineto (data->job,
-							     element->x1,
-							     element->y1 + data->summary_thick);
+								  element->x1,
+								  element->y1 + data->summary_thick);
 					planner_print_job_lineto (data->job,
-							     element->x2,
-							     element->y1 + data->summary_thick);
+								  element->x2,
+								  element->y1 + data->summary_thick);
 					gnome_print_closepath (data->job->pc);
 					gnome_print_fill (data->job->pc);
 					break;
 				case SUMMARY_MIDDLE:
-						planner_print_job_moveto (data->job,
-							     element->x2,
-							     element->y1 + 2 * data->summary_thick);
+					planner_print_job_moveto (data->job,
+								  element->x2,
+								  element->y1 + 2 * data->summary_thick);
 					planner_print_job_lineto (data->job,
-							     element->x1,
-							     element->y1 + 2 * data->summary_thick);
+								  element->x1,
+								  element->y1 + 2 * data->summary_thick);
 					planner_print_job_lineto (data->job,
-							     element->x1,
-							     element->y1 + data->summary_thick);
+								  element->x1,
+								  element->y1 + data->summary_thick);
 					planner_print_job_lineto (data->job,
-							     element->x2,
-							     element->y1 + data->summary_thick);
+								  element->x2,
+								  element->y1 + data->summary_thick);
 					gnome_print_closepath (data->job->pc);
 					gnome_print_fill (data->job->pc);
 					break;
 				case RELATION_ARROW_DOWN:
 					planner_print_job_moveto (data->job,
-							     element->x1,
-							     element->y1);
+								  element->x1,
+								  element->y1);
 					planner_print_job_lineto (data->job,
-							     element->x1 - data->arrow_width,
-							     element->y1 - data->arrow_height);
+								  element->x1 - data->arrow_width,
+								  element->y1 - data->arrow_height);
 					planner_print_job_lineto (data->job,
-							     element->x1 + data->arrow_width,
-							     element->y1 - data->arrow_height);
+								  element->x1 + data->arrow_width,
+								  element->y1 - data->arrow_height);
 					gnome_print_closepath (data->job->pc);
 					gnome_print_fill (data->job->pc);
 					break;
 				case RELATION_ARROW_UP:
 					planner_print_job_moveto (data->job,
-							     element->x1,
-							     element->y1);
+								  element->x1,
+								  element->y1);
 					planner_print_job_lineto (data->job,
-							     element->x1 - data->arrow_width,
-							     element->y1 + data->arrow_height);
+								  element->x1 - data->arrow_width,
+								  element->y1 + data->arrow_height);
 					planner_print_job_lineto (data->job,
-							     element->x1 + data->arrow_width,
-							     element->y1 + data->arrow_height);
+								  element->x1 + data->arrow_width,
+								  element->y1 + data->arrow_height);
 					gnome_print_closepath (data->job->pc);
 					gnome_print_fill (data->job->pc);
 					break;
@@ -1257,28 +1257,28 @@ planner_gantt_print_do (PlannerGanttPrintData *data)
 					break;
 				case MILESTONE:
 					planner_print_job_moveto (data->job,
-							     element->x1,
-							     element->y1);
+								  element->x1,
+								  element->y1);
 					planner_print_job_lineto (data->job,
-							     element->x1 + data->milestone_size,
-							     element->y1 + data->milestone_size);
+								  element->x1 + data->milestone_size,
+								  element->y1 + data->milestone_size);
 					planner_print_job_lineto (data->job,
-							     element->x1,
-							     element->y1 + 2 * data->milestone_size);
+								  element->x1,
+								  element->y1 + 2 * data->milestone_size);
 					planner_print_job_lineto (data->job,
-							     element->x1 - data->milestone_size,
-							     element->y1 + data->milestone_size);
+								  element->x1 - data->milestone_size,
+								  element->y1 + data->milestone_size);
 					gnome_print_closepath (data->job->pc);
 					gnome_print_fill (data->job->pc);
 					break;
 				case RESOURCES:
 					planner_print_job_show_clipped (data->job,
-								   element->x1,
-								   element->y1,
-								   element->resources,
-								   0, 0,
-								   data->job->width,
-								   data->job->height);
+									element->x1,
+									element->y1,
+									element->resources,
+									0, 0,
+									data->job->width,
+									data->job->height);
 					break;
 				default:
 					break;
@@ -1323,7 +1323,7 @@ planner_gantt_print_data_new (PlannerView     *view,
 	
 	/* Note: This looks hackish, but it's the same equation used for the
 	 * zoom level in the gantt chart, which actually is calculated to have a
-	 * "good feel" :). We scale it width the paper size here though...
+	 * "good feel" :). We scale it with the paper size here though...
 	 */
 	data->f = 1000 / pow (2, level - 19) / data->job->width;
 
@@ -1335,8 +1335,8 @@ planner_gantt_print_data_new (PlannerView     *view,
 
 	font = planner_print_job_get_font (job);
 	
-	data->task_start_coords = g_hash_table_new (NULL, NULL);
-	data->task_finish_coords = g_hash_table_new (NULL, NULL);
+	data->task_start_coords = g_hash_table_new_full (NULL, NULL, NULL, g_free);
+	data->task_finish_coords = g_hash_table_new_full (NULL, NULL, NULL, g_free);
 
 	/* Start and finish of the project. */
 	data->start = mrp_project_get_project_start (data->project);
@@ -1357,23 +1357,26 @@ planner_gantt_print_data_new (PlannerView     *view,
 		mrptime    finish;
 		gdouble    width;
 		gdouble    name_width;
-		gchar     *str;
 		
-		g_object_get (task, "name", &name, "finish", &finish, NULL);
+		g_object_get (task,
+			      "name", &name,
+			      "finish", &finish,
+			      NULL);
 
 		name_width = gnome_font_get_width_utf8 (font, name) + 
-			       ptask->depth * INDENT_FACTOR * data->job->x_pad;
-		if (max_name_width < name_width)
+			ptask->depth * INDENT_FACTOR * data->job->x_pad;
+		
+		if (max_name_width < name_width) {
 			max_name_width = name_width;
+		}
 
-		gantt_print_get_allocated_resources_string (data, task, &str, &width);
+		gantt_print_get_allocated_resources_string (data, task, NULL, &width);
 
 		data->finish = MAX (data->finish, finish);/* + width * data->f);*/
 	}
-
+	
 	data->name_x1 = 0;
-	data->name_x2 = data->name_x1 + max_name_width + gnome_font_get_width_utf8
-		(font, "WW");
+	data->name_x2 = data->name_x1 + max_name_width + gnome_font_get_width_utf8 (font, "WW");
 	
 	data->work_x1 = data->name_x2;
 	data->work_x2 = data->work_x1 + gnome_font_get_width_utf8 (font, "WORKWO");
@@ -1392,16 +1395,16 @@ planner_gantt_print_data_new (PlannerView     *view,
 	data->milestone_size = 0.40 * data->row_height;
 	data->arrow_height   = 0.24 * data->row_height;
 	data->arrow_width    = 0.16 * data->row_height;
-
+	
 	if (num_tasks > 0) {
 		data->tasks_per_page_without_header = data->job->height / data->row_height;
 		data->tasks_per_page_with_header = (data->job->height - data->header_height) /
 			data->row_height;
-				
+		
 		data->cols_of_pages = ceil (((data->finish - data->start) /
 					     data->f + data->tree_x2 - data->tree_x1) /
 					    data->job->width);
-
+		
 		data->rows_of_pages = ceil ((num_tasks * data->row_height + data->header_height) /
 					    (data->job->height - data->row_height));
  		
@@ -1409,7 +1412,7 @@ planner_gantt_print_data_new (PlannerView     *view,
 		    data->tasks_per_page_with_header >= num_tasks) {
 			data->rows_of_pages--;
 		}
-
+		
 		data->cols_of_pages = MAX (1, data->cols_of_pages);
 		data->rows_of_pages = MAX (1, data->rows_of_pages);
 		
@@ -1419,9 +1422,31 @@ planner_gantt_print_data_new (PlannerView     *view,
 	return data;
 }
 
+static void
+free_page (Page *page)
+{
+	GList   *l;
+	Element *element;
+
+	for (l = page->elements; l; l = l->next) {
+		element = l->data;
+		g_free (element->resources);
+	}
+
+	for (l = page->background_elements; l; l = l->next) {
+		element = l->data;
+		g_free (element->resources);
+	}
+
+	g_list_free (page->elements);
+	g_list_free (page->background_elements);
+}
+
 void
 planner_gantt_print_data_free (PlannerGanttPrintData *data)
 {
+	gint i, num_pages;
+	
 	g_return_if_fail (data != NULL);
 
 	g_hash_table_destroy (data->task_start_coords);
@@ -1430,6 +1455,12 @@ planner_gantt_print_data_free (PlannerGanttPrintData *data)
 	gantt_print_free_print_tasks (data->tasks);
 	data->tasks = NULL;
 
+	num_pages = data->cols_of_pages * data->rows_of_pages;
+	
+	for (i = 0; i < num_pages; i++) {
+		free_page (&data->pages[i]);
+	}
+	
 	g_free (data->pages);
 	data->pages = NULL;
 
